--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -7,18 +7,9 @@
 
   <%= csrf_meta_tag %>
 
-  <%= javascript_include_tag 'jquery.js' %>
-  <%= javascript_include_tag 'jquery.livequery.js' %>
-  <%= javascript_include_tag 'jquery.form.js' %>
-  <%= javascript_include_tag 'jquery.easing.1.3.js' %>
-  <%= javascript_include_tag 'rails.js' %>
-  <%= javascript_include_tag 'humanmsg' %>
-  <%= javascript_include_tag 'admin/shortcut' %>
-  <%= javascript_include_tag 'admin/common' %>
+  <%= javascript_include_tag "admin" %>
+  <%= stylesheet_link_tag "admin" %>
 
-  <%= stylesheet_link_tag 'formtastic' %>
-  <%= stylesheet_link_tag 'humanmsg' %>
-  <%= stylesheet_link_tag 'admin' %>
   <%= yield(:head) %>
 
   <% if flash[:notice] -%>
