Update to Rails 4.1.
Use Spring. Use acts-as-taggable-on. Remove old style finders.

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -22,7 +22,7 @@
   <% @comment_activity.each_with_index do |activity, i| -%>
     <li class="<%= i == 0 ? 'first ' : '' %>item">
       <h3><%= link_to_post(activity.post, truncate(activity.post.title, :length => 50)) %></h3>
-      <span class='date'><%= activity.most_recent_comment.created_at.strftime("%b %e") %></span>
+      <span class='date'><%= activity.comments.first.created_at.strftime("%b %e") %></span>
       <span class='count'><%= activity.post.approved_comments.size %></span>
       <ul>
         <% activity.comments.each_with_index do |comment, index| -%>
